	Fixed ldapmodify printing error from ldap_result() (ITS#4812)
	Fixed slapadd LDIF parsing (ITS#4817)
	Fixed slapd syncrepl memory leaks (ITS#4805)
	Fixed slapd-bdb/hdb be_entry_get with aliases/referrals (ITS#4810)
	Fixed slapd-ldap more response handling bugs (ITS#4782)
	Fixed slapd-ldap C-API code tests (ITS#4808)
	Fixed slapd-monitor NULL printf (ITS#4811)
	Fixed slapo-syncprov presence list (ITS#4813)

OpenLDAP 2.3.33 Release (2007/01/17)
	Fixed slapd syncrepl error logging with delta-syncrepl
	Fixed slapd-ldap/meta privileged conn caching (ITS#4547)
	Fixed slapd-ldap chase-referrals switch (ITS#4557)
	Fixed slapd-ldap bind behavior when idassert is always used (ITS#4781)
	Fixed slapd-ldap response handling bugs (ITS#4782)
	Fixed slapd-ldap idassert mode=self anonymous ops (ITS#4798)
	Fixed slapd-ldap/meta privileged connections handling (ITS#4791)
	Fixed slapd-meta retrying (ITS#4594, 4762)
	Fixed slapo-chain referral DN use (ITS#4776)
	Fixed slapo-dynlist dangling pointer after entry free (ITS#4801)
	Fixed libldap ldap_pvt_put_filter syntax checks (ITS#4648)
	Documentation
		Fixed reference to deprecated stmt in slapacl(8) (ITS#4803)

OpenLDAP 2.3.32 Release (2007/01/04)
	Fixed slapd add redundant duplicate value check (ITS#4600)
	Fixed slapd ACL set memleak (ITS#4780)
	Fixed slapd syncrepl shutdown hang (ITS#4790)
	Fixed slapd connection_get race condition on Windows (ITS#4793)
	Fixed slapd values return filter control leak (ITS#4794)
	Fixed slapd-sql Debug typo (ITS#4784)
	Fixed slapo-rwm parameter handling (ITS#3971, 4458, 4638, 4689)
	Documentation
		Fixed reference to deprecated option in admin guide (ITS#4795)

OpenLDAP 2.3.31 Release (2006/12/17)
	Fixed libldap unchased referral leak (ITS#4545)
	Fixed libldap tls callback (ITS#4723)
	Fixed liblutil ldif file: URL parsing
	Fixed slapd syncrepl logging (ITS#4755)
	Fixed slapd group ACL caching when proxyAuthz'ing (ITS#4760)
	Fixed slapd "group" authz default member parsing (ITS#4761)